--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,11 +1,38 @@
 ---
-title: Introduction
-description: Getting Started with Dflow
+title: Welcome to dFlow
+description: dFlow is a self-hosted deployment and infrastructure platform built for
+  developers and teams who want the flexibility of managing their own servers —
+  without the complexity of traditional DevOps tools or container orchestration.
 ---
 
-## What is Dflow
+Think of it as a simpler alternative to tools like Vercel, Railway, or Heroku —
+but designed for **self-hosting**, **server control**, and **real production
+use-cases**.
 
-A self-hosted platform for deploying and managing applications, similar to
-Vercel, Railway, or Heroku. DFlow provides automated deployment workflows,
-container orchestration, and infrastructure management capabilities while giving
-you full control over your infrastructure and data.
+## What Makes dFlow Different
+
+- 🚀 **Multi-server orchestration over SSH** — scale across any number of
+  servers without containers or Kubernetes.
+- ⚙️ **Production-ready workflows** — deploy apps, run cron jobs, manage
+  databases, and monitor everything from a single UI.
+- 🧩 **Bring your own stack** — supports Node.js, PHP, Python, Go, Ruby, and
+  databases like MySQL, Postgres, MongoDB, Redis, and more.
+- 🔐 **No vendor lock-in** — use your own infrastructure, your own cloud
+  provider, and extend the platform freely.
+- 💻 **Built for developers** — designed with a dev-first mindset for speed,
+  clarity, and control.
+
+### Why dFlow?
+
+| Feature                           | Description                                                                                                           |
+| --------------------------------- | --------------------------------------------------------------------------------------------------------------------- |
+| **Simplicity without compromise** | Easily deploy apps and manage environments with a clean, intuitive UI — no scripting or YAML required.                |
+| **Full control**                  | Retain full access to your infrastructure, data, and servers. dFlow runs over SSH with minimal setup.                 |
+| **Cost efficiency**               | Skip expensive PaaS bills. Run your apps on affordable infrastructure while still enjoying automation and visibility. |
+| **Open source**                   | dFlow is free to use, inspect, and contribute to. Designed to grow with your needs.                                   |
+
+### Ideal For
+
+- Indie developers hosting apps across a few servers
+- Startups looking for scalable deployment without DevOps overhead
+- Agencies managing multiple client projects with reusable infrastructure
