--- a/content/docs/aws.mdx
+++ b/content/docs/aws.mdx
@@ -41,7 +41,7 @@ policies to it. The following policies are required:
   create and manage EC2 instances.
 </Callout>
 
-Follow these steps to create an IAM role with the necessary permissions:
+Follow these steps to create an IAM role with the necessary permissions or follow the below visual guide:
 
 1. Log in to your AWS account & navigate to dashboard.
 2. Search for IAM in the search bar and click on it.
@@ -57,6 +57,10 @@ Follow these steps to create an IAM role with the necessary permissions:
 12. (Optional) Add a description, then click **Create access key**.
 13. Copy the **Access key ID** and **Secret access key**—you'll need these to
     connect your account to dFlow.
+
+### Visual Guide
+
+<ResponsiveIframe src="https://scribehow.com/embed/Create_IAM_User_for_managing_EC2_instance_AWS__4KwT5PdGTFGWNL-qoPE2lw" />
 
 <Callout type="warn">
   Currently, dFlow supports creating new EC2 instances only. Support for managing existing instances
