docs: Wrote info about installation using railway

--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -5,5 +5,15 @@ description: Let's learn how to install dFlow application.
 
 There are 2 ways to install dFlow.
 
-1. Using **Railway**. (Coming soon...)
-2. Manual Installation
+1. **Deploy using Railway** (One click deployment)
+2. **Manual Installation** (coming soon)
+
+## Deploy on Railway
+
+[![Deploy on Railway](https://railway.app/button.svg)](https://railway.app/template/NNuPfr?referralCode=I9okFq)
+
+When you deploy dFlow on Railway, it will create a new project in your [dashboard](https://railway.com/dashboard) which includes 3 services:
+
+- **dFlow application**: The main service that handles the core functionality of dFlow.
+- **Redis**: The caching service that stores the state of the dFlow application.
+- **MongoDB**: The database service that stores the data of the dFlow application.
