chore: update deployment references to dFlow and add DeployButton component

--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -5,14 +5,14 @@ description: Let's learn how to install dFlow application.
 
 There are 2 ways to install dFlow.
 
-1. **Deploy using Railway** (One click deployment)
+1. **Deploy using dFlow** (One click deployment)
 2. **Manual Installation** (coming soon)
 
-## Deploy on Railway
+## Deploy on dFlow
 
-[![Deploy on Railway](https://railway.app/button.svg)](https://railway.app/template/NNuPfr?referralCode=I9okFq)
+[<DeployButton/>](https://demo.dflow.sh/templates/compose?templateId=68122108205912cbc9397ec8)
 
-When you deploy dFlow on Railway, it will create a new project in your [dashboard](https://railway.com/dashboard) which includes 3 services:
+When you deploy dFlow on Cloud, it will create a new project in your [dashboard](https://demo.dflow.sh/dashboard) which includes 3 services:
 
 - **dFlow application**: The main service that handles the core functionality of dFlow.
 - **Redis**: The caching service that stores the state of the dFlow application.
